# cairo_native

./: .dockerignore  .gitattributes  .gitignore  404.html  AOT-CallingConvention.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  DEVELOPER-GUIDE.md  Dockerfile  LICENSE  Makefile  README.md  a.out  all.html  aot.ll  aot.mlir  aot_api.cairo  aot_api.dylib  aot_enums.cairo  build.rs  cairo.cairo  codecov.yml  compile-and-run.sh  compile-contract.sh  corelib.patch  counter.json  counter1.json  crates.js  dict-opt.mlir  dict.mlir  dump.ll  env-macos.sh  env.sh  fib.json  fib.md  fib.mlir  fib_2M.cairo  fib_llvm.ll  fib_llvm.mlir  (+47 more)
binaries/cairo-native-bin-utils/: Cargo.toml
binaries/cairo-native-bin-utils/src/: lib.rs  test.rs
binaries/cairo-native-compile/: Cargo.toml
binaries/cairo-native-compile/src/: main.rs
binaries/cairo-native-dump/: Cargo.toml
binaries/cairo-native-dump/src/: main.rs
binaries/cairo-native-run/: Cargo.toml
binaries/cairo-native-run/src/: main.rs
binaries/cairo-native-test/: Cargo.toml
binaries/cairo-native-test-2/: Cargo.toml
binaries/cairo-native-test-2/src/: main.rs
binaries/cairo-native-test/src/: main.rs
binaries/scarb-native-test/: Cargo.toml
binaries/scarb-native-test/src/: main.rs
binaries/starknet-native-compile/: Cargo.toml  README.md
binaries/starknet-native-compile/src/: main.rs
cli/: Cargo.toml  all.html  enum.Commands.html  fn.main.html  index.html  sidebar-items.js  struct.Args.html
cli/src/: main.rs
debug_utils/cairo-native-stress/: Cargo.toml
debug_utils/cairo-native-stress/src/: main.rs
debug_utils/casm-data-flow/: Cargo.toml  Makefile  README.md
debug_utils/casm-data-flow/examples/: basic.rs  run-contract.rs
debug_utils/casm-data-flow/programs/: fibonacci_starknet.cairo
debug_utils/casm-data-flow/src/: lib.rs  main.rs  memory.rs  search.rs  trace.rs
debug_utils/sierra-emu/: .gitignore  Cargo.toml  Makefile  README.md
debug_utils/sierra-emu/examples/: contract.rs  program.rs
debug_utils/sierra-emu/programs/: syscalls.cairo
debug_utils/sierra-emu/src/: args.rs  debug.rs  dump.rs  gas.rs  lib.rs  main.rs  starknet.rs  test_utils.rs  utils.rs  value.rs  vm.rs
debug_utils/sierra-emu/src/starknet/: block_info.rs  execution_info.rs  execution_info_v2.rs  execution_info_v3.rs  resource_bounds.rs  secp256k1_point.rs  secp256r1_point.rs  tx_info.rs  tx_v2_info.rs  tx_v3_info.rs  u256.rs
debug_utils/sierra-emu/src/vm/: ap_tracking.rs  array.rs  bool.rs  bounded_int.rs  box.rs  branch_align.rs  bytes31.rs  cast.rs  circuit.rs  const.rs  coupon.rs  drop.rs  dup.rs  ec.rs  enum.rs  felt252.rs  felt252_dict.rs  felt252_dict_entry.rs  function_call.rs  gas.rs  gas_reserve.rs  int.rs  int128.rs  int8.rs  int_range.rs  mem.rs  nullable.rs  pedersen.rs  poseidon.rs  starknet.rs  struct.rs  uint128.rs  uint16.rs  uint256.rs  uint32.rs  uint512.rs  uint64.rs  uint8.rs
debug_utils/sierra-emu/tests/: corelib.rs  libfuncs.rs  syscalls.rs
debug_utils/sierra-emu/tests/common/: mod.rs
debug_utils/sierra-emu/tests/tests/: circuits.cairo  circuits_failure.cairo  test_u32.cairo
debug_utils/sierra2casm-dbg/: .gitignore  Cargo.toml
debug_utils/sierra2casm-dbg/examples/: basic.rs
debug_utils/sierra2casm-dbg/src/: main.rs  mappings.rs  program.rs  search.rs
fuzz/: .gitignore  Cargo.toml  README.md
fuzz/src/: fuzz_sierra.rs  lib.rs  main.rs  utils.rs
fuzzer/: Cargo.toml  README.md
fuzzer/crashes/: corelib-poseidon.xxd
fuzzer/src/: lib.rs
melior-next/: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  wrapper.h
melior-next/src/: context.rs  diagnostics.rs  dialect.rs  error.rs  execution_engine.rs  ir.rs  lib.rs  logical_result.rs  pass.rs  string_ref.rs  utility.rs
melior-next/src/dialect/: arith.rs  cf.rs  handle.rs  registry.rs
melior-next/src/dialect/llvm/: type.rs
melior-next/src/ir/: affine_map.rs  attribute.rs  block.rs  identifier.rs  location.rs  module.rs  named_attribute.rs  operation.rs  region.rs  type.rs  value.rs
melior-next/src/ir/block/: argument.rs
melior-next/src/ir/operation/: builder.rs  result.rs
melior-next/src/ir/type/: function.rs  (+4 more)
melior-next/src/pass/: conversion.rs  manager.rs  operation_manager.rs  transform.rs
melior-next/src/snapshots/: melior_next__tests__build_add.snap  melior_next__tests__build_module.snap  melior_next__tests__build_module_with_dialect.snap  melior_next__tests__build_sum.snap
runtime/: Cargo.toml  README.md
runtime/src/: lib.rs
sierra2mlir/: Cargo.toml  all.html  build.rs  enum.CompilerOutput.html  fn.compile.html  fn.execute.html  fn.load_program.html  fn.main.html  fn.parse_input.html  fn.parse_output.html  index.html  sidebar-items.js  struct.Args.html  struct.CmdLine.html
sierra2mlir/benches/: cairo.rs  execution.rs  sierra2mlir.rs  util.rs
sierra2mlir/benches/programs/: .gitignore  bf.cairo  fib.cairo  fib.mlir  fib.sierra  fib0.json  map_rec.cairo
sierra2mlir/compiler/: enum.SierraType.html  index.html  sidebar-items.js  struct.Compiler.html  struct.FunctionDef.html  struct.Storage.html
sierra2mlir/libfuncs/: index.html
sierra2mlir/src/: compiler.rs  lib.rs  main.rs  sierra_type.rs  utility.rs
sierra2mlir/src/compiler/: external_funcs.rs  fn_attributes.rs  helper_funcs.rs  helpers.rs  mlir_ops.rs  mod.rs  types.rs
sierra2mlir/src/libfuncs/: inline_funcs.rs  lib_func_def.rs  mod.rs  sierra_enum.rs
sierra2mlir/src/statements/: function_call.rs  general_libfunc_implementations.rs  inline_jumps.rs  inline_libfuncs.rs  mod.rs
sierra2mlir/src/types/: mod.rs
sierra2mlir/src/userfuncs/: mod.rs  user_func_def.rs
sierra2mlir/statements/: index.html
sierra2mlir/tests/: .gitignore  comparison.rs  example_compiles.rs  expect.rs
sierra2mlir/tests/comparison/: .gitignore  enum_return.cairo  enum_return.sierra  fib_counter.cairo  fib_counter.sierra  fib_local.sierra  id.sierra  pedersen.cairo  pedersen.sierra  simple_return.cairo  simple_return.sierra  tuple_return.sierra  unwrap_non_zero.cairo
sierra2mlir/types/: index.html
test_utils/: Cargo.toml  compile_test_data.py  pull_external_projects.py  test_cairo.sh
(+3038 files in other folders)
