[workspace.package]
version = "0.6.1"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/lambdaclass/cairo_native"

[package]
name = "cairo-native"
description = "A compiler to convert Cairo's IR Sierra code to MLIR and execute it."
readme = "README.md"
keywords = ["starknet", "cairo", "compiler", "mlir"]
categories = ["compilers"]
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

# Explicitly set the resolver to the default for edition >= 2021
# https://doc.rust-lang.org/edition-guide/rust-2021/default-cargo-resolver.html
resolver = "2"

[features]
with-cheatcode = []
with-debug-utils = []
with-mem-tracing = []
with-libfunc-profiling = []
with-segfault-catcher = []
with-trace-dump = ["dep:sierra-emu"]

# the aquamarine dep is only used in docs and cannot be detected as used by cargo udeps
[package.metadata.cargo-udeps.ignore]
normal = ["aquamarine"]

[dependencies]
aquamarine = "0.6.0"
bumpalo = "3.16.0"
cairo-lang-compiler.workspace = true
cairo-lang-filesystem.workspace = true
cairo-lang-runner.workspace = true
cairo-lang-sierra.workspace = true
cairo-lang-sierra-to-casm.workspace = true
educe = "0.5.11" # can't update until https://github.com/magiclen/educe/issues/27
itertools.workspace = true
lazy_static = "1.5"
libc = "0.2"
llvm-sys = "191.0.0"
melior = { workspace = true, features = ["ods-dialects", "helpers"] }
mlir-sys = { version = "0.4.1" }
num-bigint.workspace = true
num-traits.workspace = true
starknet-types-core = { workspace = true, features = [
    "std",
    "serde",
    "num-traits",
] }
tempfile.workspace = true
thiserror = "2.0.9"
tracing = "0.1"
utf8_iter = "1.0.4"
sierra-emu = { workspace = true, optional = true }


# CLI dependencies
cairo-lang-sierra-ap-change.workspace = true
cairo-lang-sierra-gas.workspace = true
cairo-lang-starknet.workspace = true
cairo-lang-utils.workspace = true
cairo-lang-starknet-classes.workspace = true
libloading.workspace = true
serde = { workspace = true, features = ["derive"] }
# needed to interface with cairo-lang-*
keccak = "0.1.5"
sha2 = "0.10.8"                                          # needed for the syscall handler stub
serde_json.workspace = true

# for the syscallhandler stub to match blockifier
ark-secp256k1 = "0.5.0"
ark-secp256r1 = "0.5.0"
ark-ec = "0.5.0"
ark-ff = "0.5.0"
num-integer.workspace = true

# Runtime functions
rand = "0.9.0"
starknet-curve.workspace = true

[dev-dependencies]
cairo-vm = { git = "https://github.com/lambdaclass/cairo-vm", rev = "742e9ae3de8b55f4a5dc44831f06068712f2f0c5", features = ["cairo-1-hints"] }
criterion = { version = "0.5.1", features = ["html_reports"] }
lambdaworks-math = "0.11.0"
pretty_assertions_sorted = "1.2.3"
proptest = "1.5.0"
rstest = "0.24.0"
test-case = "3.3"
walkdir = "2.5.0"
serde_json = { version = "1.0.128" }
rayon = "1.10.0"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json", "registry"] }
cairo-lang-sierra-generator.workspace = true

[profile.optimized-dev]
inherits = "dev"
opt-level = 3

[profile.ci]
inherits = "dev"
opt-level = 3
debug = "line-tables-only"

[profile.release]
lto = true
codegen-units = 1

# Set the settings for build scripts and proc-macros.
[profile.dev.build-override]
opt-level = 3

# On dev optimize dependencies a bit so it's not as slow.
[profile.dev.package."*"]
opt-level = 1

[[bench]]
name = "benches"
harness = false

[[bench]]
name = "compile_time"
harness = false

[[bench]]
name = "libfuncs"
harness = false

[workspace]
members = [
    "debug_utils",
    "debug_utils/sierra-emu",
    "debug_utils/casm-data-flow",
    "debug_utils/cairo-native-stress",
    "binaries/cairo-native-compile",
    "binaries/cairo-native-dump",
    "binaries/cairo-native-run",
    "binaries/cairo-native-test",
    "binaries/scarb-native-dump",
    "binaries/scarb-native-test",
    "binaries/starknet-native-compile",
    "binaries/cairo-native-bin-utils",
]

[workspace.dependencies]
anyhow = "1.0"
cairo-lang-casm = "~2.12.3"
cairo-lang-compiler = "~2.12.3"
cairo-lang-defs = "~2.12.3"
cairo-lang-filesystem = "~2.12.3"
cairo-lang-runner = "~2.12.3"
cairo-lang-semantic = "~2.12.3"
cairo-lang-sierra = "~2.12.3"
cairo-lang-sierra-ap-change = "~2.12.3"
cairo-lang-sierra-gas = "~2.12.3"
cairo-lang-sierra-generator = "~2.12.3"
cairo-lang-sierra-to-casm = "~2.12.3"
cairo-lang-starknet = "~2.12.3"
cairo-lang-starknet-classes = "~2.12.3"
cairo-lang-test-plugin = "~2.12.3"
cairo-lang-utils = "~2.12.3"
cairo-native-bin-utils.path = "binaries/cairo-native-bin-utils"
cairo-native.path = "."
clap = "4.5.23"
colored = "2.1.0"
itertools = "0.14.0"
libloading = "0.8.6"
melior = "0.21.0"
num-bigint = "0.4.6"
num-integer = "0.1.46"
num-traits = "0.2"
scarb-metadata = "1.12.0"
scarb-ui = "0.1.5"
serde = "1.0.0"
serde_json = "1.0.128"
sierra-emu = { path = "debug_utils/sierra-emu", version = "0.6.1" }
starknet-crypto = "0.8.1"
starknet-curve = "0.6.0"
starknet-types-core = "0.2.0"
stats_alloc = "0.1.10"
tempfile = "3.15.0"
tracing = "0.1"
tracing-subscriber = "0.3.19"
