[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
cairo-lang-compiler = "1.0.0-alpha.7"
cairo-lang-sierra = "1.0.0-alpha.7"
clap = { version = "4.1.13", features = ["derive"] }
color-eyre = "0.6.2"
sierra2mlir = { version = "0.1.0", path = "../sierra2mlir" }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
