[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
cairo-lang-compiler = "1.1.0"
cairo-lang-sierra = "1.1.0"
clap = { version = "4.1.13", features = ["derive"] }
color-eyre = "0.6.2"
sierra2mlir = { version = "0.1.0", path = "../sierra2mlir" }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
