[package]
name = "cairo-native-fuzz"
version = "0.0.1"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
cairo-lang-compiler = "2.6.3"
cairo-lang-starknet = "2.6.3"
starknet-types-core = "0.1.0"
cairo-native = { path = "../"}

[[bin]]
name = "fuzz-sierra"
path = "src/fuzz_sierra.rs"
test = false
doc = false
bench = false


