[package]
name = "cairo-native-fuzz"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints.rust]
unexpected_cfgs = { level = "deny", check-cfg = ['cfg(fuzzing)'] }

[dependencies]
afl = "0.17"
arbitrary = "1.4.1"
cairo-lang-sierra.workspace = true
cairo-native = { workspace = true, features = ["testing", "with-cheatcode"]}
serde_json.workspace = true
starknet-types-core.workspace = true
rand = "0.9.2"
clap = { workspace = true, features = ["derive"] }
