[package]
name = "cairo-native-runtime"
version = "0.2.8"
description = "The runtime for cairo-native."
edition = "2021"
license = "Apache-2.0"
keywords = ["starknet", "cairo", "runtime"]

[lib]
crate-type = ["rlib", "cdylib", "staticlib"]

[features]
with-trace-dump = [
    "dep:cairo-lang-sierra",
    "dep:cairo-lang-utils",
    "dep:sierra-emu",
    "dep:num-bigint",
]

[dependencies]
starknet-types-core = { version = "0.1.7", default-features = false, features = [
    "std",
    "serde",
    "hash",
] }
cairo-lang-sierra-gas = "=2.10.0-rc.0"
starknet-curve = "0.5.1"
lazy_static = "1.5.0"
rand = "0.8.5"
num-bigint = { version = "0.4.4", optional = true }
cairo-lang-sierra = { version = "=2.10.0-rc.0", optional = true }
cairo-lang-utils = { version = "=2.10.0-rc.0", optional = true }
sierra-emu = { path = "../../sierra-emu", optional = true }
itertools = "0.14.0"
num-traits = "0.2"
