[package]
name = "sierra2mlir"
version = "0.1.0"
edition = "2021"
authors = [
    "Edgar <@edg-l>",
]

[[bench]]
name = "execution"
harness = false

[[bench]]
name = "cairo"
harness = false

[dependencies]
cairo-lang-compiler = { git = "https://github.com/starkware-libs/cairo", tag = "v1.1.0-rc0" }
cairo-lang-sierra = { git = "https://github.com/starkware-libs/cairo", tag = "v1.1.0-rc0" }
cairo-lang-sierra-gas = { git = "https://github.com/starkware-libs/cairo", tag = "v1.1.0-rc0" }
cairo-lang-sierra-to-casm = { git = "https://github.com/starkware-libs/cairo", tag = "v1.1.0-rc0" }
cairo-lang-sierra-ap-change = { git = "https://github.com/starkware-libs/cairo", tag = "v1.1.0-rc0" }
cairo-lang-utils = { git = "https://github.com/starkware-libs/cairo", tag = "v1.1.0-rc0" }
cfg-match = "0.2.1"
color-eyre = "0.6.2"
itertools = "0.10.5"
melior-asm = { path = "../melior-asm" }
melior-next = { git = "https://github.com/edg-l/melior-next", rev = "3e3e6b7c3e89b52a0d1e20950cdc89516f343bf9" }
num-bigint = "0.4.3"
num-traits = "0.2.15"
regex = "1.7.3"
tracing = "0.1.37"

[dev-dependencies]
cairo-felt = "0.3.0-rc1"
cairo-lang-runner = { git = "https://github.com/starkware-libs/cairo", tag = "v1.1.0-rc0" }
cairo-vm = "0.3.0-rc1"
criterion = "0.4.0"
test-case = "3.0.0"
