[package]
name = "sierra2mlir"
version = "0.1.0"
edition = "2021"
authors = [
    "Edgar <@edg-l>",
]

[[bench]]
name = "cairo"
harness = false

[[bench]]
name = "sierra2mlir"
harness = false

[dependencies]
cairo-lang-compiler = "1.1.0"
cairo-lang-sierra = "1.1.0"
cairo-lang-sierra-gas = "1.1.0"
cairo-lang-sierra-to-casm = "1.1.0"
cairo-lang-sierra-ap-change = "1.1.0"
cairo-lang-utils = "1.1.0"
cfg-match = "0.2.1"
color-eyre = "0.6.2"
itertools = "0.10.5"
melior-asm = { path = "../melior-asm" }
melior-next = { path = "../melior-next" }
num-bigint = "0.4.3"
num-traits = "0.2.15"
regex = "1.7.3"
tracing = "0.1.37"

[dev-dependencies]
cairo-felt = "0.3.0-rc1"
cairo-lang-runner = "1.1.0"
cairo-vm = "0.3.0-rc1"
criterion = "0.5.0"
test-case = "3.0.0"
