[package]
name = "test-utils"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
clap = { workspace = true, features = ["derive"] }
serde_json.workspace = true

cairo-lang-compiler = "2.14.1-dev.1"
cairo-lang-filesystem = "2.14.1-dev.1"
cairo-lang-sierra = "2.14.1-dev.1"
cairo-lang-starknet = "2.14.1-dev.1"
cairo-lang-test-plugin = "2.14.1-dev.1"
cairo-lang-test-runner = "2.14.1-dev.1"
