[package]
name = "cairo-native-bin-utils"
edition.workspace = true

[features]
scarb = []
with-cheatcode = [ "cairo-native/with-cheatcode" ]

[dependencies]
anyhow.workspace = true
cairo-lang-runner.workspace = true
cairo-lang-sierra-to-casm.workspace = true
cairo-lang-sierra-type-size.workspace = true
cairo-lang-sierra.workspace = true
cairo-lang-starknet.workspace = true
cairo-lang-test-plugin.workspace = true
cairo-lang-utils.workspace = true
cairo-native.workspace = true
colored.workspace = true
itertools.workspace = true
num-traits.workspace = true
scarb-metadata.workspace = true
starknet-types-core.workspace = true
tracing.workspace = true
