[package]
name = "cairo-native-compile"
edition.workspace = true

[dependencies]
anyhow.workspace = true
cairo-lang-compiler.workspace = true
cairo-native.workspace = true
clap = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
