[package]
name = "cairo-native-test-2"
edition.workspace = true

[dependencies]
anyhow.workspace = true
clap = { workspace = true, features = ["derive"] }
serde_json.workspace = true
cairo-native-bin-utils = { workspace = true, features = ["with-cheatcode"] }
cairo-lang-test-plugin.workspace = true
