[package]
name = "cairo-native-test"
edition.workspace = true

[dependencies]
anyhow.workspace = true
cairo-lang-compiler.workspace = true
cairo-lang-filesystem.workspace = true
cairo-lang-starknet.workspace = true
cairo-lang-test-plugin.workspace = true
cairo-lang-test-runner.workspace = true
cairo-native-bin-utils.workspace = true
clap = { workspace = true, features = ["derive"] }
tracing-subscriber = { workspace = true, features = ["env-filter"]}
cairo-native = { workspace = true, features = ["with-cheatcode"]}
tracing.workspace = true
