[package]
name = "cairo-native-test"
edition.workspace = true

[dependencies]
anyhow.workspace = true
cairo-lang-compiler.workspace = true
cairo-lang-test-plugin.workspace = true
cairo-lang-test-runner.workspace = true
cairo-native-bin-utils = { workspace = true, features = ["with-cheatcode"] }
clap = { workspace = true, features = ["derive"] }
tracing-subscriber = { workspace = true, features = ["env-filter"]}
tracing.workspace = true
