[package]
name = "starknet-native-compile"
readme = "README.md"
description = "A binary for compiling Sierra contracts with Cairo Native"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
cairo-lang-sierra.workspace = true
cairo-lang-starknet-classes.workspace = true
cairo-native = { workspace = true }
clap = { workspace = true, features = ["derive"] }
serde_json.workspace = true
