[package]
name = "cairo-native-stress"
edition.workspace = true

[dependencies]
cairo-lang-sierra.workspace = true
cairo-lang-starknet.workspace = true
cairo-native.workspace = true
clap = { workspace = true, features = ["derive"] }
libloading.workspace = true
num-bigint.workspace = true
stats_alloc.workspace = true
tempfile.workspace = true
tracing-subscriber = { workspace = true, features = ["json"] }
tracing.workspace = true
