[package]
name = "casm-data-flow"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bincode = { version = "2.0.0-rc.3", default-features = false }
clap = { version = "4.5.27", features = ["derive"] }
serde_json = "1.0.138"
starknet-types-core.workspace = true
cairo-lang-casm = { workspace = true, features = [ "serde", ] }
cairo-lang-utils.workspace = true
cairo-lang-starknet-classes.workspace = true
cairo-vm = { git = "https://github.com/lambdaclass/cairo-vm/", rev = "742e9ae3de8b55f4a5dc44831f06068712f2f0c5", features = ["cairo-1-hints"] }
