[package]
name = "casm-data-flow"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bincode.workspace = true
clap = { workspace = true, features = ["derive"] }
serde_json.workspace = true
starknet-types-core.workspace = true
cairo-lang-casm = { workspace = true, features = [ "serde", ] }
cairo-lang-utils.workspace = true
cairo-lang-starknet-classes.workspace = true
cairo-vm = { workspace = true, features = ["cairo-1-hints"] }
