[package]
name = "casm-data-flow"
version = "0.8.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/lambdaclass/cairo_native"

[dependencies]
bincode = "2.0.1"
clap = { version = "4.5.23", features = ["derive"] }
serde_json = "1.0.128"
starknet-types-core = "0.2.0"
cairo-lang-casm = { version = "~2.14.0", features = [ "serde", ] }
cairo-lang-utils = "~2.14.0"
cairo-lang-starknet-classes = "~2.14.0"
cairo-vm = { version = "3.0.0", features = ["cairo-1-hints"] }
