[package]
name = "sierra-emu"
description = "A Cairo (Sierra) Virtual Machine."
readme = "README.md"
keywords = ["starknet", "cairo", "vm", "sierra"]
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
cairo-lang-compiler.workspace = true
cairo-lang-filesystem.workspace = true
cairo-lang-runner.workspace = true
cairo-lang-sierra-ap-change.workspace = true
cairo-lang-sierra-gas.workspace = true
cairo-lang-sierra-generator.workspace = true
cairo-lang-sierra-to-casm.workspace = true
cairo-lang-sierra.workspace = true
cairo-lang-starknet-classes.workspace = true
cairo-lang-test-plugin.workspace = true
cairo-lang-utils.workspace = true
clap = { workspace = true, features = ["derive"] }
k256.workspace = true
keccak.workspace = true
num-integer.workspace = true
num-bigint.workspace = true
num-traits.workspace = true
p256.workspace = true
rand.workspace = true
sec1 = { workspace = true, features = ["std"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sha2 = { workspace = true, features = ["compress"] }
smallvec.workspace = true
starknet-crypto.workspace = true
starknet-curve.workspace = true
starknet-types-core.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
rayon.workspace = true

[dev-dependencies]
cairo-lang-compiler.workspace = true
cairo-lang-starknet.workspace = true
